Exception handling in admin controller